[gd_scene load_steps=8 format=2]

[ext_resource path="res://Gui/Chessopath.gd" type="Script" id=1]
[ext_resource path="res://Gui/MenuBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gui/ViewportContainer.gd" type="Script" id=3]
[ext_resource path="res://Game/Chessboard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Gui/Database.tscn" type="PackedScene" id=5]
[ext_resource path="res://Gui/ModeControlPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Gui/StatusBar.tscn" type="PackedScene" id=7]

[node name="Chessopath" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse" ]

[node name="MenuBar" parent="." index="0" instance=ExtResource( 2 )]

margin_right = 1024.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 530.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Mouse" ]

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 480.0
margin_bottom = 505.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = false
stretch_shrink = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="Viewport" type="Viewport" parent="HBoxContainer/CenterContainer/ViewportContainer" index="0"]

arvr = false
size = Vector2( 480, 480 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = true
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "GUI", "Physics" ]

[node name="Chessboard" parent="HBoxContainer/CenterContainer/ViewportContainer/Viewport" index="0" instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 484.0
margin_right = 1024.0
margin_bottom = 530.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Database" parent="HBoxContainer/VBoxContainer" index="0" instance=ExtResource( 5 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 540.0
margin_bottom = 14.0

[node name="ModeControlPanel" parent="HBoxContainer/VBoxContainer" index="1" instance=ExtResource( 6 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 540.0
margin_bottom = 530.0

[node name="StatusBar" parent="." index="2" instance=ExtResource( 7 )]

margin_top = 572.0
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="FEN_Pasted" from="MenuBar" to="." method="_on_MenuBar_FEN_Pasted"]

[connection signal="chessboard_clicked" from="HBoxContainer/CenterContainer/ViewportContainer" to="." method="_on_ViewportContainer_chessboard_clicked"]

[connection signal="piece_moved" from="HBoxContainer/CenterContainer/ViewportContainer/Viewport/Chessboard" to="." method="_on_Chessboard_piece_moved"]

[connection signal="clear_all" from="HBoxContainer/VBoxContainer/ModeControlPanel" to="." method="_on_ModeControlPanel_clear_all"]

[connection signal="init_position" from="HBoxContainer/VBoxContainer/ModeControlPanel" to="." method="_on_ModeControlPanel_init_position"]

[connection signal="mode_changed" from="HBoxContainer/VBoxContainer/ModeControlPanel" to="." method="_on_ModeControlPanel_mode_changed"]

[connection signal="move_played" from="HBoxContainer/VBoxContainer/ModeControlPanel" to="." method="_on_ModeControlPanel_move_played"]


